--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,8 +1,9 @@
 {
     "Revtura":{
         "nom" : "Revtura",
+        "miniature": "/revtura/revtura.png",
         "titre" : "Revtura",
-        "info" : "Création site web",
+        "info" : "Le réseau des voyageurs",
         "titre1": "Un projet collectif",
         "paragraphe1": "Revtura est un site fictif réalisé en 2ème semestre de DUT MMi (Métiers des Multimédia et de lInternet). Issus d'un travail de groupe nous devions nous organiser afin de produire un site répondant à différentes contraintes a l'image d'un projet pro. Revtura est ce qui s'approche le plus d'un réseau social pour voyageur. L'utlisateur a donc la possibilité d'utiliser de nombreuses fonctionnalités comme la gestion d'un compte, la gestion de contenu ou encore de la géolocalisation.",
         "photo1": "/revtura/accueil.png",
@@ -20,7 +21,9 @@
 
     "JeanBauhin":{
         "nom" : "JeanBauhin",
-        "titre" : "Collège Jean Bauhin",
+        "miniature": "/jeanBauhin/jeanbauhin.png",
+        "titre" : "Jean Bauhin",
+        "info" : "Site du collège Jean Bauhin",
         "titre1": "Projet professionel",
         "paragraphe1": "Le site du collège Jean Bauhin est projet tutoré qui a pour vocation de nous plongé dans l'univers professionnel. Fini les projets fictifs nous nous sommes retrouvés face à des commanditaires bien réel. Plus qu'un exercice, le droit à l'erreur n'était pas envisageable. L'objectif de ce projet était de réaliser le site web du collège Jean Bauhin d'Audincourt répondant à une problématique d'image avec toutes les contraintes d'un site hébergé par l'académie de Besançon.",
         "photo1": "/jeanBauhin/grilleMockup.png",
@@ -34,8 +37,68 @@
         "photo2": "/jeanBauhin/accueil.png"
     },
 
-    "Anonyme":{
-        "nom" : "Relevé de Notes",
-        "titre": "Mon titre Ano"
+    "RelevesNotes":{
+        "nom" : "RelevesNotes",
+        "miniature": "/releveNotes/mmi.jpg",
+        "titre" : "Relevé de Notes",
+        "info" : "Notes des étudiants MMi",
+        "titre1": "Développement Mobile",
+        "paragraphe1": "Ce projet en duo clôture le chapitre sur le développement mobile. Nous devons réaliser une application reposant sur le Framework ionic. L'application doit répertorier l'ensemble des élèves des deux promotions ainsi que leur relevé de notes. On obtient donc une liste avec toutes les personnes de la promotion ainsi qu'une fiche leur correspondant contenant leur moyenne du semestre.",
+        "photo1": "/releveNotes/ficheEleves.png",
+        "titre2": "Réalisation technique",
+        "paragraphe2": "Une fois le projet créé, nous avons organisé les routes. Chacune avec un template et un controller qui leur corresponde. Le controller listeCtrl.js va chercher les données récupérer par le service Ajax. Ce dernier récupère donc un .json stocké en local. Nous pouvons ensuite restituer toutes ses données dans un template. On utilise la directive ng-repeat pour faire une boucle et ainsi afficher l'intégralité des éléments contenus dans le fichier .json",
+        "photo2": "/revtura/landingPage.png"
+    },
+
+    "Photobox":{
+        "nom" : "Photobox",
+        "miniature": "/photobox/photobox.png",
+        "titre" : "Photobox",
+        "info" : "Application de partage de photos",
+        "titre1": "Le concept de ce service",
+        "paragraphe1": "PhotoBox est une application amicale qui permet aux utilisateurs de rejoindre des évenements et d’en garder un souvenir. La philosophie de l'application est de réunir les utilisateurs autour de la photo et de la fête.  Ainsi depuis l’application ils pourront rejoindre les évènements qui les intéressent et y poster des photos, qui seront disponibles à tous si l’évènement est publique ou seulement aux invités si l’évènement est privé.",
+        "photo1": "/photobox/login.jpg",
+        "couleurs": {
+            "c1" : "#824AA7",
+            "c2" : "#EEEEEE",
+            "c3" : "#3F2D86"
+        },
+        "titre2": "Architecture",
+        "paragraphe2": "Pour donner vie à ce service nous avons décidé de le structurer de la manière suivante. Une application mobile permettant aux utilisateurs d'interagir avec notre service. Cette application communique avec une API qui est connectée à une base MongoDB. Un playeur est également mis en place afin de projeter les photos prises par les utilisateurs.",
+        "photo2": "/photobox/architecture.png"
+    },
+
+    "Mediatheque":{
+        "nom" : "Mediatheque",
+        "miniature": "/mediatheque/mediatheque.png",
+        "titre" : "Médiathèque",
+        "info" : "Outil de gestion de médiathèque",
+        "titre1": "Un projet collectif",
+        "paragraphe1": "Revtura est un site fictif réalisé en 2ème semestre de DUT MMi (Métiers des Multimédia et de lInternet). Issus d'un travail de groupe nous devions nous organiser afin de produire un site répondant à différentes contraintes a l'image d'un projet pro. Revtura est ce qui s'approche le plus d'un réseau social pour voyageur. L'utlisateur a donc la possibilité d'utiliser de nombreuses fonctionnalités comme la gestion d'un compte, la gestion de contenu ou encore de la géolocalisation.",
+        "photo1": "/revtura/accueil.png",
+        "couleurs": {
+            "c1" : "#0A8EDA",
+            "c2" : "#F2F2F2",
+            "c3" : "#FFAE26",
+            "c4" : "#006C89"
+        },
+        "titre2": "Charte graphique",
+        "paragraphe2": "Promettant aux utilisateurs qu’ils pourront partager leurs expériences de voyages et de découvrir celle des autres nous avons donc choisi le nom Revtura qui les deux mots latin Reveles et Cultura qui se traduisent par Découvrir et Culture. De la est né notre harmonié colorée ainsi que la sélection des typographie.",
+        "paragraphe2bis" : "La création du logo suit aussi le ton donnée au site. Le choix d'un PIN pour la destination choisie par les utilisateurs et la flèche de validation symbolisant la sureté et faisant référence à un oiseau de dos.",
+        "photo2": "/revtura/landingPage.png"
+    },
+
+    "HLP":{
+        "nom" : "HLP",
+        "miniature": "/hlp/hlp.jpg",
+        "titre" : "hlp group",
+        "info" : "Digitilisation de processus métier",
+        "titre1": "Un projet collectif",
+        "paragraphe1": "Revtura est un site fictif réalisé en 2ème semestre de DUT MMi (Métiers des Multimédia et de lInternet). Issus d'un travail de groupe nous devions nous organiser afin de produire un site répondant à différentes contraintes a l'image d'un projet pro. Revtura est ce qui s'approche le plus d'un réseau social pour voyageur. L'utlisateur a donc la possibilité d'utiliser de nombreuses fonctionnalités comme la gestion d'un compte, la gestion de contenu ou encore de la géolocalisation.",
+        "photo1": "/revtura/accueil.png",
+        "titre2": "Charte graphique",
+        "paragraphe2": "Promettant aux utilisateurs qu’ils pourront partager leurs expériences de voyages et de découvrir celle des autres nous avons donc choisi le nom Revtura qui les deux mots latin Reveles et Cultura qui se traduisent par Découvrir et Culture. De la est né notre harmonié colorée ainsi que la sélection des typographie.",
+        "paragraphe2bis" : "La création du logo suit aussi le ton donnée au site. Le choix d'un PIN pour la destination choisie par les utilisateurs et la flèche de validation symbolisant la sureté et faisant référence à un oiseau de dos.",
+        "photo2": "/revtura/landingPage.png"
     }
 }
